--- a/invidious.user.css
+++ b/invidious.user.css
@@ -8,7 +8,7 @@
 @-moz-document domain("http://127.0.0.1:31008/watch*") {
     #contents {
         max-width: 80vw;
-        margin: 0;
+        margin: auto;
     }
 
     #comments {
